force-app/main/default/objects/Proof_of_Pickup__c/Proof_of_Pickup__c.object-meta.xml
<CustomObject>
    <label>Proof of Pickup</label>
    <nameField>
        <label>Proof of Pickup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof of Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>