force-app/main/default/objects/Proof_of_Pickup__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Proof of Pickups</relationshipLabel>
    <relationshipName>Proof_of_Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>