force-app/main/default/objects/Proof_of_Pickup__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stop</label>
    <referenceTo>Stop__c</referenceTo>
    <relationshipLabel>Proof of Pickups</relationshipLabel>
    <relationshipName>Proof_of_Pickups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>